...
            .padding(top = 56.dp, bottom = 48.dp)

    ) {
        LazyColumn(
            modifier = Modifier
                .fillMaxSize()
                .semantics { contentDescription = "searched_article_list" }
        ) {
            itemsIndexed(
                items = state.articles
            ) { index, article  ->
                val saveArticle = SwipeAction(
                    icon = {
...
